Issue with prject relocation

--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -388,7 +388,7 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj">
+    <ProjectReference Include="DataAccessLayer\DataAccessLayer.csproj">
       <Project>{19b1be14-0de4-4f31-aa18-db057500e9ef}</Project>
       <Name>DataAccessLayer</Name>
     </ProjectReference>
